--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -2,7 +2,14 @@
     display: flex;
     flex-direction: column;
     gap: 31px;
+
+    .banner {
+        @media screen and (max-width: 600px) {
+            height: 223px;
+        }
+    }
 }
+
 .values-container {
     margin: 0 108px;
     display: flex;
@@ -11,16 +18,15 @@
 }
 
 @media screen and (max-width: 600px) {
-    .About  {
+    .About {
         gap: 19px;
     }
-    .About .banner {
-        height: 223px;
-    }
+
     .values-container {
         margin: 0;
         gap: 20px;
     }
+
     .footer-text {
         font-weight: 500;
         font-size: 12px;
