--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     gap: 43px;
     color: white;
+
+    @media screen and (max-width: 900px) {
+        gap: 22px;
+    }
 }
 
 .locations-container {
@@ -13,16 +17,12 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 60px;
     grid-row-gap: 50px;
-}
-.locations-container >* {
-    flex-basis: 30%;
-}
 
-@media screen and (max-width: 900px) {
-    .Home {
-        gap: 22px;
+    >* {
+        flex-basis: 30%;
     }
-    .locations-container {
+
+    @media screen and (max-width: 900px) {
         background-color: #fff;
         padding: 0;
         grid-template-columns: 1fr;
